<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/HeadingMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answered_correctly" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/answers_correct"
                style="@style/HeadingLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                style="@style/HeadingMedium"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/of"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/answers_total"
                style="@style/HeadingLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />

        </LinearLayout>


        <TextView
            style="@style/HeadingMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations" />

        <Button
            android:id="@+id/button_play_again"
            style="@style/ButtonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_another_quiz" />

    </LinearLayout>

</ScrollView>
